fixed spacing

--- a/src/components/BrandStatement.js/brandStyles.module.scss
+++ b/src/components/BrandStatement.js/brandStyles.module.scss
@@ -4,7 +4,10 @@
   justify-content: center;
   flex-direction: column;
 }
-
+.spanstyles {
+  font-size: 28px;
+  padding-right: 5px;
+}
 .Brand_h2 {
   padding-top: 2rem;
   font-size: 3rem;
